[project]
name = "tiger"
version = "0.1.0"
description = "越群山智能生活助手 - 后端服务"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=1.2.0,<1.3.0",
    "langchain>=1.2.0,<1.3.0",
    "langchain-community>=0.4.1",
    "dashscope>=1.20.0",
    "asyncpg>=0.30.0",
    "pymilvus>=2.4.0,<3.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "loguru>=0.7.0",
    "langgraph-cli[inmem]>=0.4.26",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg-binary>=3.3.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.0",
    "langchain-tavily>=0.2.18",
    "langchain-openai>=1.2.2",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "mcp>=1.27.2",
    "agentskills-core>=0.2.3",
    "tenacity>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
only-include = ["app", "main.py"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
